# 20241115_etl_olist_logistica_satisfacao

./: .gitignore  README.md  pyproject.toml
assets/: Fluxos visuais.pptx  Quadro de indicadores e métricas.xlsx  Yldebran - MV - Avaliação de conhecimento - Projeto prático.docx  [Análise] Impacto da logística na satisfação do cliente.docx
sql/: dCalendario_create.sql  dCalendario_insert.sql  dw_dCalendario_create.sql  dw_dCalendario_insert.sql  dw_dGeolocation_create.sql  dw_dGeolocation_transform.sql  dw_fOrders_create.sql  dw_fOrders_transform.sql  dw_fReviews_create.sql  dw_fReviews_transform.sql  staging_customers_create.sql  staging_geolocation_create.sql  staging_orders_create.sql  staging_reviews_create.sql
src/: etl.py  extract.py  main.py  transform.py
